; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_synpred_1.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_synpred_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@yy_pos = common dso_local global i8* null, align 8
@yy_text = common dso_local global i8* null, align 8
@yy_line = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @synpred_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synpred_1(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i8*, i8** @yy_pos, align 8
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** @yy_text, align 8
  store i8* %8, i8** %5, align 8
  %9 = load i32, i32* @yy_line, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @check_type_name_start(i32 %10)
  %12 = icmp ne i32 %11, -1
  %13 = zext i1 %12 to i32
  store i32 %13, i32* %3, align 4
  %14 = load i8*, i8** %4, align 8
  store i8* %14, i8** @yy_pos, align 8
  %15 = load i8*, i8** %5, align 8
  store i8* %15, i8** @yy_text, align 8
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* @yy_line, align 4
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @check_type_name_start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
